<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.LoginFragment">


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:src="@drawable/cartola"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="@style/ContainerComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text"
                android:hint="@string/hint_email_form_cadasto"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="17sp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_senha"
                android:textColor="@color/light_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text"
                android:hint="@string/hint_senha_form_cadasto"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="17sp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/txt_login_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/light_blue" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_criarConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="10dp"
                    android:text="@string/txt_criarConta"
                    android:textColor="@color/light_blue"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_recuperarConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="10dp"
                    android:text="@string/txt_recuperarConta"
                    android:textColor="@color/light_blue"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            tools:visibility="visible" />


    </LinearLayout>


</ScrollView>