<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                app:navigationIcon="@drawable/ic_arrow_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_criarConta"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_email_form_cadasto"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="@color/light_gray"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_senha"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_passwordRegister"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_senha_form_cadasto"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/light_gray"
                android:textSize="15sp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_criarConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:text="@string/txt_enviar"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/light_blue"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="visible"
                android:indeterminateTint="@color/white"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>