<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.EditarFragment">

        <!--    Geral-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_titulo"
            style="@style/ContainerComponents_Titulos_Lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:background="@drawable/bg_information_titulos"
                    android:elevation="15dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="2dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/txt_campeao_geral" />

                <ImageView
                    android:id="@+id/iv_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:adjustViewBounds="true"
                    android:elevation="8dp"
                    android:maxWidth="80dp"
                    android:minWidth="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
                    tools:src="@drawable/c_geral" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_titulo"
                    app:layout_constraintTop_toBottomOf="@id/txt_titulo">


                    <TextView
                        android:id="@+id/txt_pontos_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:textColor="@color/light_blue"
                        android:textSize="85sp"
                        android:textStyle="bold"
                        tools:text="@string/pt_campeao_geral" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:elevation="8dp"
                        android:text="@string/txt_pontos"
                        android:textAllCaps="true"
                        android:textColor="@color/light_blue"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>